[package]
name = "qbels"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mkanilsson/qbels"
readme = "README.md"
description = "A simple tree-sitter based lsp implementation for Quick Backend (QBE) IR "
keywords = ["qbe", "lsp"]

[dependencies]
itertools = "0.14.0"
tokio = { version = "1.46.1", features = ["full"] }
tower-lsp-server = "0.22.0"
tree-sitter = "0.25.8"
tree-sitter-qbe = "0.1.0"
